--- a/Collapse_Predictor.ipynb
+++ b/Collapse_Predictor.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2YiJM1DgNlhL",
-        "outputId": "a7c9482f-6c40-48b3-843a-45963da85356"
+        "outputId": "b34e9f7c-de82-49ca-9353-f3d0c5dd7b34"
       },
       "outputs": [
         {
@@ -36,35 +36,34 @@
             "            macro avg       1.00      1.00      1.00       672\n",
             "         weighted avg       1.00      1.00      1.00       672\n",
             "\n",
-            "Example Prediction:\n",
-            "At Risk of collapsing\n",
             "\n",
-            "📍 Population Collapse Risk Predictor\n"
+            "📍 Population Collapse Risk Predictor (ML-powered)\n",
+            "Enter Country Name: algeria \n",
+            "Enter Fertility Rate: 2\n",
+            "Enter Population Over 65 (%): 2\n",
+            "\n",
+            "🔍 Prediction for algeria : At Risk of collapsing\n"
           ]
         }
       ],
       "source": [
-        "\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.metrics import classification_report\n",
         "\n",
-        "# Load and prepare data\n",
-        "import pandas as pd\n",
-        "\n",
+        "# Load data\n",
         "url = \"https://raw.githubusercontent.com/hamidi311/Population-Collapse-Analysis/main/ML_model/predi_model_data%20(1).csv\"\n",
-        "\n",
-        "\n",
         "df = pd.read_csv(url)\n",
         "\n",
+        "# Filter for recent years\n",
         "df = df[df['Year'] >= 2010]\n",
         "\n",
         "# Select key columns and drop missing values\n",
         "df = df[['Fertility Rate', 'Population Over 65', 'Birth Rate']].dropna().copy()\n",
         "\n",
-        "# Define the label using custom logic\n",
+        "# Use temporary logic only to generate labels for training\n",
         "def label_status(row):\n",
         "    if row['Fertility Rate'] < 2.1 and row['Population Over 65'] > 15:\n",
         "        return 'Collapsing'\n",
@@ -79,23 +78,23 @@
         "le = LabelEncoder()\n",
         "df['status_encoded'] = le.fit_transform(df['status'])\n",
         "\n",
-        "# Features and labels\n",
+        "# Define features (X) and labels (y)\n",
         "X = df[['Fertility Rate', 'Population Over 65']]\n",
         "y = df['status_encoded']\n",
         "\n",
-        "# Train/test split\n",
+        "# Split into train and test sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "# Train model (Random Forest)\n",
+        "# Train model\n",
         "model = RandomForestClassifier(random_state=42)\n",
         "model.fit(X_train, y_train)\n",
         "\n",
-        "# Evaluate\n",
+        "# Evaluate model\n",
         "y_pred = model.predict(X_test)\n",
         "print(\"Evaluation Report:\")\n",
         "print(classification_report(y_test, y_pred, target_names=le.classes_))\n",
         "\n",
-        "\n",
+        "# Predict using ML only (no logic)\n",
         "def predict_status(fertility_rate, pop_over_65):\n",
         "    input_df = pd.DataFrame([[fertility_rate, pop_over_65]],\n",
         "                            columns=['Fertility Rate', 'Population Over 65'])\n",
@@ -103,35 +102,25 @@
         "    prediction_label = le.inverse_transform([prediction_encoded])[0]\n",
         "    return prediction_label\n",
         "\n",
-        "# Example Test\n",
-        "print(\"Example Prediction:\")\n",
-        "print(predict_status(1.9, 14.0))  # Try different values here\n",
-        "\n",
+        "# Interactive CLI Prediction\n",
         "def interactive_prediction():\n",
-        "    print(\"\\n📍 Population Collapse Risk Predictor\")\n",
-        "\n",
+        "    print(\"\\n📍 Population Collapse Risk Predictor (ML-powered)\")\n",
         "    country = input(\"Enter Country Name: \")\n",
         "    fertility_rate = float(input(\"Enter Fertility Rate: \"))\n",
         "    pop_over_65 = float(input(\"Enter Population Over 65 (%): \"))\n",
         "\n",
-        "    input_df = pd.DataFrame([[fertility_rate, pop_over_65]],\n",
-        "                            columns=['Fertility Rate', 'Population Over 65'])\n",
+        "    prediction = predict_status(fertility_rate, pop_over_65)\n",
+        "    print(f\"\\n🔍 Prediction for {country}: {prediction}\")\n",
         "\n",
-        "    prediction_encoded = model.predict(input_df)[0]\n",
-        "    prediction_label = le.inverse_transform([prediction_encoded])[0]\n",
-        "\n",
-        "    print(f\"\\n🔍 Prediction for {country}: {prediction_label}\")\n",
-        "\n",
-        "# Call the function\n",
-        "interactive_prediction()\n",
-        "\n"
+        "# Run interactive prediction\n",
+        "interactive_prediction()\n"
       ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP34RAyP2xX4MljfUfo9BvD",
+      "authorship_tag": "ABX9TyMGdXiAxveK+iWnHDl2mQrr",
       "include_colab_link": true
     },
     "kernelspec": {
