--- a/Collapse_Predictor.ipynb
+++ b/Collapse_Predictor.ipynb
@@ -75,9 +75,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LHKRtVzSKIa9",
-        "outputId": "8abbf9b0-9269-427f-fdf3-08ccacc67908"
+        "outputId": "c7e645ba-e8f2-4061-f7b5-82fd23f78fbd"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,11 +96,11 @@
             "\n",
             "\n",
             "📍 Population Collapse Risk Predictor (ML-powered)\n",
-            "Enter Country Name: algeria \n",
-            "Enter Fertility Rate: 1\n",
-            "Enter Population Over 65 (%): 1\n",
+            "Enter Country Name: haiti\n",
+            "Enter Fertility Rate: 2.5\n",
+            "Enter Population Over 65 (%): 4.7\n",
             "\n",
-            "🔍 Prediction for algeria : At Risk of collapsing\n"
+            "🔍 Prediction for haiti: Growing\n"
           ]
         }
       ]
@@ -141,7 +141,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
